--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <li>CompTIA CySA+</li>
             <li>CompTIA Security+</li>
             <li>Linux Essentials</li>
-            <li>Associate of ISC2</li>
+            <li>Associate of ISC2 SCCP</li>
             <li>CompTIA Network+</li>
             <li>ITIL 4 Foundation</li>
         </ul>
