--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header>
         <h1>Ezequiel Castillo</h1>
         <p>Cybersecurity Analyst | Threat Detection & Response</p>
+        <button id="dark-mode-toggle">Toggle Dark Mode</button>
         <nav>
             <ul>
                 <li><a href="#home" onclick="showPage('home')">Home</a></li>
@@ -41,7 +42,7 @@
             <li>CompTIA CySA+</li>
             <li>CompTIA Security+</li>
             <li>Linux Essentials</li>
-            <li>Associate of ISC2 SCCP</li>
+            <li>Associate of ISC2</li>
             <li>CompTIA Network+</li>
             <li>ITIL 4 Foundation</li>
         </ul>
@@ -61,6 +62,18 @@
         function showPage(pageId) {
             document.querySelectorAll('.page').forEach(page => page.style.display = 'none');
             document.getElementById(pageId).style.display = 'block';
+        }
+
+        // Dark mode toggle
+        const darkModeToggle = document.getElementById('dark-mode-toggle');
+        darkModeToggle.addEventListener('click', () => {
+            document.body.classList.toggle('dark-mode');
+            localStorage.setItem('darkMode', document.body.classList.contains('dark-mode'));
+        });
+
+        // Load dark mode preference
+        if (localStorage.getItem('darkMode') === 'true') {
+            document.body.classList.add('dark-mode');
         }
     </script>
 </body>
