--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section id="projects" class="page" style="display:none;">
         <h2>Cybersecurity Projects</h2>
         <ul>
-            <li><strong>Home Security Lab:</strong> Configured Splunk SIEM, monitored traffic, and simulated attacks.</li>
+            <li><strong>Pi Hole:</strong> Implemented a network-wide ad-blocking solution using Pi-hole on a Raspberry Pi, integrated with WireGuard VPN via PiVPN. This setup ensures ad-free browsing across all devices on the local network and provides secure, encrypted access to the home network from remote locations.</li>
             <li><strong>Phishing Analysis:</strong> Conducted email header investigations to detect spoofing.</li>
             <li><strong>Vulnerability Scanning:</strong> Used Nmap, Nessus, and PowerShell for assessments.</li>
         </ul>
