--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
     <section id="projects" class="page" style="display:none;">
         <h2>Cybersecurity Projects</h2>
         <ul>
-            <li><strong>Pi Hole:</strong> Implemented a network-wide ad-blocking solution using Pi-hole on a Raspberry Pi, integrated with WireGuard VPN via PiVPN. This setup ensures ad-free browsing across all devices on the local network and provides secure, encrypted access to the home network from remote locations.</li>
+            <li>
+  <strong>Pi Hole:</strong> Implemented a network-wide ad-blocking solution using Pi-hole on a Raspberry Pi, integrated with WireGuard VPN via PiVPN. This setup ensures ad-free browsing across all devices on the local network and provides secure, encrypted access to the home network from remote locations.
+  <br>
+  <img src="/assets/images/pihole-setup.png" alt="Pi-hole and VPN setup diagram" style="max-width: 100%; height: auto; margin-top: 10px;">
+</li>
             <li><strong>Phishing Analysis:</strong> Conducted email header investigations to detect spoofing.</li>
             <li><strong>Vulnerability Scanning:</strong> Used Nmap, Nessus, and PowerShell for assessments.</li>
         </ul>
@@ -42,9 +46,11 @@
             <li>CompTIA CySA+</li>
             <li>CompTIA Security+</li>
             <li>Linux Essentials</li>
-            <li>Associate of ISC2</li>
+            <li>SSCP Systems Security Certified Practitioner Certification</li>
             <li>CompTIA Network+</li>
-            <li>ITIL 4 Foundation</li>
+            <li>ITIL v4 Foundation</li>
+            <li>CompTIA A+</li>
+            <li>CompTIA Project+</li>
         </ul>
     </section>
     
