--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <li>
   <strong>Pi Hole:</strong> Implemented a network-wide ad-blocking solution using Pi-hole on a Raspberry Pi, integrated with WireGuard VPN via PiVPN. This setup ensures ad-free browsing across all devices on the local network and provides secure, encrypted access to the home network from remote locations.
   <br>
-  <img src="/assets/images/pihole-setup.png" alt="Pi-hole and VPN setup diagram" style="max-width: 100%; height: auto; margin-top: 10px;">
+  <img src="/assets/images/pihole-setup.png" alt="Pi-hole and VPN setup diagram" alt="Pi-hole and VPN setup diagram" style="max-width: 100%; height: auto; margin-top: 10px;">
 </li>
             <li><strong>Phishing Analysis:</strong> Conducted email header investigations to detect spoofing.</li>
             <li><strong>Vulnerability Scanning:</strong> Used Nmap, Nessus, and PowerShell for assessments.</li>
