--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <img src="assets/img/pihole-setup.png" alt="Pi-hole and VPN setup diagram" alt="Pi-hole and VPN setup diagram" style="max-width: 100%; height: auto; margin-top: 10px;">
 </li>
             <li><strong>Phishing Analysis:</strong> Conducted email header investigations to detect spoofing.</li>
-            <li><strong>Vulnerability Scanning:</strong> Used Nmap, Nessus, and PowerShell for assessments.</li>
+            <li><strong> Pwnagotchi Build – Wi-Fi Hacking AI Companion:</strong> Built a fully portable Pwnagotchi device for wireless network auditing and WPA handshake capture. Configured and calibrated the system using PiSugar3 for power management and RTC synchronization. Integrated a Waveshare e-ink display and customized config.toml for automated operation. Connected via USB Ethernet gadget mode and enabled SSH control from host PC.</li>
         </ul>
     </section>
     
