--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
             <li>
   <strong>Pi Hole:</strong> Implemented a network-wide ad-blocking solution using Pi-hole on a Raspberry Pi, integrated with WireGuard VPN via PiVPN. This setup ensures ad-free browsing across all devices on the local network and provides secure, encrypted access to the home network from remote locations.
   <br>
-  <img src="assets/img/pihole-setup.png" alt="Pi-hole and VPN setup diagram" alt="Pi-hole and VPN setup diagram" style="max-width: 100%; height: auto; margin-top: 10px;">
+    <details>
+        <summary> View Pi-hole Setup</summary>
+        <img src="assets/img/pihole-setup.png" alt="Pi-hole and VPN setup diagram" alt="Pi-hole and VPN setup diagram" style="max-width: 100%; height: auto; margin-top: 10px;">
+    </details>
+  
 </li>
             <li><strong>Phishing Analysis:</strong> Conducted email header investigations to detect spoofing.</li>
             <li><strong> Pwnagotchi Build – Wi-Fi Hacking AI Companion:</strong> Built a fully portable Pwnagotchi device for wireless network auditing and WPA handshake capture. Configured and calibrated the system using PiSugar3 for power management and RTC synchronization. Integrated a Waveshare e-ink display and customized config.toml for automated operation. Connected via USB Ethernet gadget mode and enabled SSH control from host PC.</li>
