--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
 </li>
             <li><strong>Phishing Analysis:</strong> Conducted email header investigations to detect spoofing.</li>
             <li><strong> Pwnagotchi Build – Wi-Fi Hacking AI Companion:</strong> Built a fully portable Pwnagotchi device for wireless network auditing and WPA handshake capture. Configured and calibrated the system using PiSugar3 for power management and RTC synchronization. Integrated a Waveshare e-ink display and customized config.toml for automated operation. Connected via USB Ethernet gadget mode and enabled SSH control from host PC.</li>
-       <img src="assets/img/Screenshot 2025-06-09 182818.png" alt=" Pwnagotchi: Deep Reinforcement Learning for WiFi pwning!" style="max-width: 100%; height: auto; margin-top: 10px;">
+       <details>
+           <summary>View Pwnagotchi</summary>
+           <img src="assets/img/Screenshot 2025-06-09 182818.png" alt=" Pwnagotchi: Deep Reinforcement Learning for WiFi pwning!" style="max-width: 100%; height: auto; margin-top: 10px;">
+       </details>
+            
         </ul>
     </section>
     
