--- a/index.html
+++ b/index.html
@@ -81,23 +81,49 @@
     <p>&copy; 2025 Ezequiel Castillo | Cybersecurity Portfolio</p>
   </footer>
 
-  <script>
-function showPage(pageId) {
-  // Hide all sections
-  document.querySelectorAll('.page').forEach(page => {
-    page.classList.remove('active');
-    setTimeout(() => (page.style.display = 'none'), 300);
+<script>
+  // Set initial state
+  document.addEventListener('DOMContentLoaded', () => {
+    showPage('home');
+
+    // Restore dark mode if it was active
+    if (localStorage.getItem('darkMode') === 'enabled') {
+      document.body.classList.add('dark-mode');
+    }
+
+    // Dark mode toggle
+    document.getElementById('dark-mode-toggle').addEventListener('click', () => {
+      document.body.classList.toggle('dark-mode');
+      if (document.body.classList.contains('dark-mode')) {
+        localStorage.setItem('darkMode', 'enabled');
+      } else {
+        localStorage.setItem('darkMode', 'disabled');
+      }
+    });
   });
 
-  // Show the selected section
-  const activePage = document.getElementById(pageId);
-  activePage.style.display = 'block';
-  setTimeout(() => activePage.classList.add('active'), 10);
+  function showPage(pageId) {
+    // Hide all pages
+    document.querySelectorAll('.page').forEach(page => {
+      page.style.display = 'none';
+      page.classList.remove('active');
+    });
 
-  // Highlight the active nav link
-  document.querySelectorAll('nav a').forEach(link => link.classList.remove('active'));
-  document.querySelector(`nav a[href="#${pageId}"]`)?.classList.add('active');
-}
-  </script>
+    // Show selected page
+    const activePage = document.getElementById(pageId);
+    activePage.style.display = 'block';
+
+    // Wait for next paint to trigger transition
+    requestAnimationFrame(() => {
+      activePage.classList.add('active');
+    });
+
+    // Update active nav link
+    document.querySelectorAll('nav a').forEach(link => link.classList.remove('active'));
+    const navLink = document.querySelector(`nav a[href="#${pageId}"]`);
+    if (navLink) navLink.classList.add('active');
+  }
+</script>
+
 </body>
 </html>
